--- a/style.css
+++ b/style.css
@@ -1,13 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+html{
+    font-family: Source Code Pro, Roboto, sans-serif;
+}
 
-body{
-    font-family: Roboto, sans-serif;
+body{    
     display: flex;
     padding: 0;
     margin: 0;
-    height:100vh;
+    height: 100vh;
 }
 
+/*main section*/
+.main{
+    display:flex;
+    flex-direction: column;
+    width: 65vw;
+    background-color: rgb(238, 237, 237);
+}
+
+/*top text*/
+.top{
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    font-weight: 500;
+    padding: 20vh 10% 0 50px;
+    height: 23vh;
+}
+
+.main-text, .main-text-flavour{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/*sign up form*/
+.form-title{
+    font-size: 26px;
+    font-weight: 500;
+}
+.form-container{
+    display: flex;
+    flex-direction: column;    
+    height: auto; 
+    gap: 20px;
+    height: 77vh;
+}
+
+.sign-up-form{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
+    font-size: 16px;   
+    background-color: rgb(246, 232, 230);
+    padding: 20px 10% 30px 50px;   
+    box-shadow: 5px 6px 4px -1px hsl(0, 0%, 58%, 0.4); 
+}
+
+.form-title{
+    width: 100%;
+}
+
+.form-input{
+    display: flex;
+    flex-flow: column;
+    width: 40%;
+}
+
+.sign-up-button-container{
+    padding-top: 40px;
+    padding: 30px 0 20px 50px;
+}
+
+button{
+    padding: 20px 70px 20px 70px;
+    font-size: 16px;
+    font-weight: 600;
+    background-color: transparent;    
+    border-radius: 10px;
+}
+
+.sign-up-text{
+    padding-top: 25px;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(25, 143, 129);
+    font-weight: 800;
+}
+
+/*side bar image / logo*/
 .sidebar{
     /*
     height: 100vh;
@@ -15,25 +97,49 @@ body{
     background-color: rgb(51, 47, 42);
     max-height: 100vh;
     overflow: hidden;
-    */
+    */   
+
+    width: auto;
+    height: auto;
 
     background-image: url(./imgs/cat_nose.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 35vw;
+    
+    width: 35vw; 
+}
+
+/*logo stuff*/
+.sidebar-logo{
+    background-color: rgba(211, 211, 211, 0.4);
+    margin-top: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.logo-img{
+    height: 100px;
+}
+.logo-text{    
+    font-size: 60px;
+    font-weight:400;
+}
+
+.logo-attribution a{
+    color: black;
+    font-size: 14px;
+    position: absolute;
+    left: 12vw;
+    top: 98vh;
 }
 
 @media (max-width: 800px) {
     .sidebar {
       display: none;
     }
-}
-
-
-label{
-    display:block;
-}
-input{
-    display:block;
+    .main{
+        width: 100vw;
+    }
 }
