--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 html{
-    font-family: Source Code Pro, Roboto, sans-serif;
+    font-family: Source Code Pro, Roboto, sans-serif;    
 }
 
 body{    
@@ -125,6 +125,7 @@ a{
 .logo-text{    
     font-size: 60px;
     font-weight:400;
+    color:white;
 }
 
 .logo-attribution a{
